--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Ricardo</h1>
-    <img class="picture" src="images/Profile.jpg" alt="profile-img">
+    <img class="picture" src="images/Profile.JPG" alt="profile-img">
     <P>A <span><u>Pro</u></span>grammer, and welcome to my site!</P>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img class="mountain" src="images/mountain.png" alt="mountain-img">
